<?xml version="1.0"?>
<package format="2">
  <name>ur5_robotiq</name>
  <version>0.0.0</version>
  <description>The ur5_robotiq package</description>
  <maintainer email="austin@robotwebservices.com">aderic</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
